--- a/y9u2.md
+++ b/y9u2.md
@@ -1,5 +1,5 @@
 ---
-title: Year 9 - Digital Electronics with Arduino
+title: Year 9 - Digital Electronics & Robotics With Arduino
 layout: page
 description: About
 bodyClass: page-about
@@ -30,7 +30,7 @@ In this activity, you will build a simple circuit that makes an LED flash using 
 
 Every circuit needs a complete path for electricity to flow: from the Arduino’s power pin, through the LED and resistor, and back to GND (ground) on the Arduino. If the circuit is not connected to ground, it will not work. Once the LED is wired correctly, you will upload a program to make it turn on and off repeatedly, creating a blinking effect.
 
-<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTxNEZTcNgwN0jJQ9_l8_usBkhZayPeI5uSHybyDkKOJoNFimSmF5lmyzT7ztdYibdjnF-gxjOK5smd/pubembed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSoavbM9wOSsMZhLmbNdfM4l7PVPP0GD_x1j69ac9S9CLbKTqTLjjTASYST3APgxg/pubembed?start=false&loop=true&delayms=30000" frameborder="0" width="1280" height="749" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 
 <hr>
 
@@ -45,10 +45,7 @@ Every circuit needs a complete path for electricity to flow: from the Arduino’
 
 In this activity, you will add a push button to your Arduino circuit. A button is an input device that allows you to control what happens in your program by pressing it. When the button is pressed, it completes the circuit and sends a signal to the Arduino. You will learn how to wire the button correctly, why it needs a resistor, and how to write code that responds to button presses by turning an LED on or off.
 
-<p align="center">
-<iframe src="/Files/Y9/Arduino/Lesson 2.pdf" width="100%" height="600px" style="border: none;"></iframe>
-</p>
-
+<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQRDHeJ4XOg9MhL5NTjU-pMy5klIzU6m81Rfeh8IJfgbTbelHotZLpwrgW86PEtZg/pubembed?start=false&loop=true&delayms=30000" frameborder="0" width="1280" height="749" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 <hr>
 
 ## Lesson 3: Sensing Temperature
@@ -62,10 +59,7 @@ In this activity, you will add a push button to your Arduino circuit. A button i
 
 In this activity, you will use a temperature sensor to measure the surrounding temperature and display the result using your Arduino. A temperature sensor converts heat into an electrical signal that the Arduino can read. Unlike buttons or LEDs, which use digital signals (ON or OFF), temperature sensors provide analog values that vary depending on the temperature. You will learn how to connect the sensor correctly, why it needs three connections (power, ground, and signal), and how to write code that converts the sensor’s output into a readable temperature.
 
-<p align="center">
-<iframe src="/Files/Y9/Arduino/Lesson 3.pdf" width="100%" height="600px" style="border: none;"></iframe>
-</p>
-
+<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRgH4bH8-GfNvIBvDGgZvf202lt47grgW79gAy_vMXY9wt8ePCMozBcCxcr-hY3_A/pubembed?start=false&loop=false&delayms=30000" frameborder="0" width="1280" height="749" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 
 <hr> 
 
@@ -81,10 +75,7 @@ In this activity, you will use a temperature sensor to measure the surrounding t
 In this activity, you will build a Light Alarm using an Arduino, a photoresistor (LDR), an LED, and a buzzer. The photoresistor changes its resistance based on light intensity, which the Arduino reads as an analog value. You will write code that reacts to different light levels by turning on an LED and sounding a buzzer. This project introduces multiple outputs and structured decision-making using if / else if / else.
 
 
-<p align="center">
-<iframe src="/Files/Y9/Arduino/Lesson 4.pdf" width="100%" height="600px" style="border: none;"></iframe>
-</p>
-
+<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSXDGr8iX55Ll6IEpz1iDjLBwZQ4FFe2vnVe0e6y1PBwrycEDspSFiIP5360yhnwQ/pubembed?start=false&loop=true&delayms=30000" frameborder="0" width="1280" height="749" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 
 ## Lesson 5: Moving Servos
 
@@ -97,10 +88,6 @@ In this activity, you will build a Light Alarm using an Arduino, a photoresistor
 
 In this activity, you will learn how to control movement using a servo motor and a push button. Servos are widely used in robotics and automation because they allow precise control of position. By pressing a button, the servo will rotate to a set angle, wait for a short time, and then return to its original position. This activity builds on previous lessons about digital inputs and outputs, combining them to create a simple interactive mechanism—similar to how gates, locks, and robotic arms operate in real-world systems.
 
-<p align="center">
-<iframe src="/Files/Y9/Arduino/Lesson 5.pdf" width="100%" height="600px" style="border: none;"></iframe>
-</p>
-
-
+<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTlbDwsKiML5SB3kMUOl-mINzPNyevz7YVAWKpy9-KMQwGVfMkZJxth57OkIsjj8A/pubembed?start=false&loop=true&delayms=30000" frameborder="0" width="1280" height="749" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 
 <hr>
