--- a/y8u2.md
+++ b/y8u2.md
@@ -30,11 +30,11 @@ In this activity, you will build a simple circuit that makes an LED flash using 
 
 Every circuit needs a complete path for electricity to flow: from the Arduino’s power pin, through the LED and resistor, and back to GND (ground) on the Arduino. If the circuit is not connected to ground, it will not work. Once the LED is wired correctly, you will upload a program to make it turn on and off repeatedly, creating a blinking effect.
 
-<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSoavbM9wOSsMZhLmbNdfM4l7PVPP0GD_x1j69ac9S9CLbKTqTLjjTASYST3APgxg/pubembed?start=false&loop=true&delayms=30000" frameborder="0" width="1280" height="749" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTINN-1L-lnOkDdiyueJze_K2bTBgclB7tKZJb09i4NUaIB-LnZyKo8gF4juoefeg/pubembed?start=false&loop=true&delayms=30000" frameborder="0" width="1280" height="749" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 
 <hr>
 
-## Lesson 2: Push Buttons and LED continued
+## Lesson 2: Reading Sensor Values
 
 #### Lesson objectives
 - Explain how push buttons work as input devices.
@@ -45,8 +45,7 @@ Every circuit needs a complete path for electricity to flow: from the Arduino’
 
 In this activity, you will add a push button to your Arduino circuit. A button is an input device that allows you to control what happens in your program by pressing it. When the button is pressed, it completes the circuit and sends a signal to the Arduino. You will learn how to wire the button correctly, why it needs a resistor, and how to write code that responds to button presses by turning an LED on or off.
 
-<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQRDHeJ4XOg9MhL5NTjU-pMy5klIzU6m81Rfeh8IJfgbTbelHotZLpwrgW86PEtZg/pubembed?start=false&loop=true&delayms=30000" frameborder="0" width="1280" height="749" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-<hr>
+<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTINN-1L-lnOkDdiyueJze_K2bTBgclB7tKZJb09i4NUaIB-LnZyKo8gF4juoefeg/pubembed?start=false&loop=true&delayms=30000" frameborder="0" width="1280" height="749" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 
 ## Lesson 3: Sensing Temperature
 
