--- a/y8u2.md
+++ b/y8u2.md
@@ -1,5 +1,5 @@
 ---
-title: Year 9 - Digital Electronics & Robotics With Arduino
+title: Year 8 - Digital Electronics & Robotics With the Microbit
 layout: page
 description: About
 bodyClass: page-about
@@ -7,86 +7,54 @@ bodyClass: page-about
 
 # The Project
 
-This scheme of work introduces students to the exciting world of physical computing through hands-on Arduino projects. Over the course of several lessons, learners will explore how software and hardware interact to create real-world solutions. Starting with simple circuits such as LEDs and buttons, students will progress to more complex systems involving sensors, buzzers, transistors, and servo motors. Each project combines practical electronics with coding challenges, helping students develop problem-solving skills, logical thinking, and creativity. By the end of the unit, students will not only understand the fundamentals of microcontroller programming and circuit design but will also apply these skills to design and build their own interactive technology project.
+In this module, you’ll explore the exciting world of physical computing using the BBC Micro:bit—a small but powerful device designed to make coding hands-on and fun. We’ll start by learning the basics, including the Micro:bit’s built-in inputs and outputs such as buttons, sensors, and LEDs. Then, you’ll take things further by connecting external components to expand its capabilities. Finally, you’ll apply your skills in a creative robotics project, where you’ll design and build your own robot animal that responds to the environment. Get ready to combine coding, electronics, and imagination to bring your ideas to life!
 
-#### What is an Arduino?
-An Arduino is a small computer you can hold in your hand. It doesn’t have a screen or keyboard, but you can tell it what to do by writing simple code on your computer and sending it to the board. Unlike your laptop which is designed to save and run many computer programs, an arduino is designed to run one program only.
+#### What is the BBC Microbit?
 
-With Arduino, you can control real things using electronics — like making a robot arm wave hello, building a motion-sensing alarm that buzzes when someone walks by, creating a light show that reacts to music, or even designing a mini weather station that tells you the temperature and humidity. It's like turning your ideas into real gadgets with just a few wires and lines of code.
+The BBC Micro:bit is a small, programmable device designed to make coding and electronics accessible and fun. At its core, it contains a microcontroller, which is like a tiny computer that can read inputs (such as button presses or sensor data) and control outputs (like LEDs, motors, or speakers). Microcontrollers are widely used in everyday technology—from washing machines to cars—because they allow devices to sense, process, and respond to the world around them. In this module, you’ll learn how the Micro:bit works and how to use it to create interactive projects that combine software and hardware.
 
 
-## Lesson 1: Intro to Arduino, breadboards, and LED control
+## Lesson 1: Basic Input sand Outputs of the Microbit.
 
 #### Lesson objectives
-- Understand the role of resistors and LEDs in a circuit.
-- Learn how to configure Arduino pins for output using pinMode().
-- Write a simple program to turn an LED on and off.
+- Identify and describe the built-in LED display and buttons on the BBC Micro:bit and explain their purpose.
+- Write and run simple programs to display text and images on the Micro:bit’s LED matrix.
+- Use button inputs to trigger actions or change what is displayed on the Micro:bit.
 
 #### Introduction
 
-In this activity, you will make an LED blink using an Arduino. This simple project shows how code can control hardware. You’ll connect an LED to your Arduino, write a short program, and upload it to see the LED turn on and off at regular intervals. This is your first step in learning how electronics and programming work together.
+In this lesson, you’ll take your first steps into programming the BBC Micro:bit and discover how it can display information and respond to your commands. You’ll learn how to use the built-in LED display to show text and images, and explore how the Micro:bit’s buttons can be used as inputs to control what happens on the screen. By the end of the lesson, you’ll understand how to create simple interactive programs that combine outputs and inputs—an essential foundation for all your future projects.
 
-In this activity, you will build a simple circuit that makes an LED flash using an Arduino. An LED (Light Emitting Diode) is a small light that only works when electricity flows in the correct direction. This means LEDs have polarity: the longer leg is the positive side (called the anode), and the shorter leg is the negative side (called the cathode). To protect the LED from too much current, we use a resistor, which limits the flow of electricity.
-
-Every circuit needs a complete path for electricity to flow: from the Arduino’s power pin, through the LED and resistor, and back to GND (ground) on the Arduino. If the circuit is not connected to ground, it will not work. Once the LED is wired correctly, you will upload a program to make it turn on and off repeatedly, creating a blinking effect.
-
-<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTINN-1L-lnOkDdiyueJze_K2bTBgclB7tKZJb09i4NUaIB-LnZyKo8gF4juoefeg/pubembed?start=false&loop=true&delayms=30000" frameborder="0" width="1280" height="749" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQAHoYSwKddVu6EJ29dinBdeebWJPShHYr78-A-EVjKyzcRwdI2a3z9CNP-PmS3XQ/pubembed?start=false&loop=true&delayms=30000" frameborder="0" width="1280" height="749" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 
 <hr>
 
 ## Lesson 2: Reading Sensor Values
 
 #### Lesson objectives
-- Explain how push buttons work as input devices.
-- Use digitalRead() to detect button presses.
-- To be able to create a platform which reacts to button presses.
+- Explain what a sensor is and describe its role in physical computing.
+- Identify the built-in sensors on the BBC Micro:bit and understand what each one measures.
+- Write programs that use sensor data (e.g., accelerometer or temperature) to trigger actions or display information.
 
 #### Introduction
 
-In this activity, you will add a push button to your Arduino circuit. A button is an input device that allows you to control what happens in your program by pressing it. When the button is pressed, it completes the circuit and sends a signal to the Arduino. You will learn how to wire the button correctly, why it needs a resistor, and how to write code that responds to button presses by turning an LED on or off.
+In this lesson, you’ll discover what sensors are and how they allow devices to sense and respond to the world around them. The BBC Micro:bit comes with several built-in sensors, including an accelerometer, compass, and temperature sensor. You’ll learn how these sensors work, how to read their data, and how to use that information to make your programs interactive and responsive. By the end of the lesson, you’ll understand how sensors turn physical changes—like movement or temperature—into digital signals your code can use.
 
 <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTINN-1L-lnOkDdiyueJze_K2bTBgclB7tKZJb09i4NUaIB-LnZyKo8gF4juoefeg/pubembed?start=false&loop=true&delayms=30000" frameborder="0" width="1280" height="749" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 
 ## Lesson 3: Sensing Temperature
 
 #### Lesson objectives
-- Understand how temperature sensors (e.g., TMP36 or similar) provide analog data.
-- Use analogRead() to capture sensor values and convert them into temperature readings.
-- To be able to use if statements to change the output based on the temperature.
+- Explain how external components (LEDs, buttons, servos) can be connected to the Micro:bit and why they are useful.
+- Connect and control external electronics using the Micro:bit’s pins and write programs to operate them.
+- Combine inputs and outputs from both built-in and external components to create interactive circuits.
 
 #### Introduction
 
-In this activity, you will use a temperature sensor to measure the surrounding temperature and display the result using your Arduino. A temperature sensor converts heat into an electrical signal that the Arduino can read. Unlike buttons or LEDs, which use digital signals (ON or OFF), temperature sensors provide analog values that vary depending on the temperature. You will learn how to connect the sensor correctly, why it needs three connections (power, ground, and signal), and how to write code that converts the sensor’s output into a readable temperature.
+In this lesson, you’ll learn how to expand the capabilities of your BBC Micro:bit by connecting external components. While the Micro:bit has built-in features, adding extra electronics—such as LEDs, buttons, and servo motors—opens up endless possibilities for creative projects. You’ll discover how to connect these components safely, control them through your code, and use them to make your projects more interactive and dynamic. This is an important step toward building your own robot animal later in the module!
 
-<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRgH4bH8-GfNvIBvDGgZvf202lt47grgW79gAy_vMXY9wt8ePCMozBcCxcr-hY3_A/pubembed?start=false&loop=false&delayms=30000" frameborder="0" width="1280" height="749" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRHrgqHIRfZQoMH_HwGkHdWSVzcUcmRcRy3ZJZd1UqOR5tjIbyeoWBs2S-bNua_UA/pubembed?start=false&loop=true&delayms=30000" frameborder="0" width="1280" height="749" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 
 <hr> 
 
-## Lesson 4: Sensing Light
 
-#### Lesson objectives
-- Explain how a photoresistor (LDR) works and its role in detecting light levels.
-- Use analogRead() to measure light intensity and interpret the values.
-- Write a program that responds to light changes (e.g., turning on an LED when it’s dark).
-
-#### Introduction
-
-In this activity, you will build a Light Alarm using an Arduino, a photoresistor (LDR), an LED, and a buzzer. The photoresistor changes its resistance based on light intensity, which the Arduino reads as an analog value. You will write code that reacts to different light levels by turning on an LED and sounding a buzzer. This project introduces multiple outputs and structured decision-making using if / else if / else.
-
-
-<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSXDGr8iX55Ll6IEpz1iDjLBwZQ4FFe2vnVe0e6y1PBwrycEDspSFiIP5360yhnwQ/pubembed?start=false&loop=true&delayms=30000" frameborder="0" width="1280" height="749" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-
-## Lesson 5: Moving Servos
-
-#### Lesson objectives
-- Explain how a servo motor works and how it differs from other actuators.
-- Connect a servo motor and a push button to an Arduino correctly.
-- Write and modify code to control a servo motor using a button press.
-
-#### Introduction
-
-In this activity, you will learn how to control movement using a servo motor and a push button. Servos are widely used in robotics and automation because they allow precise control of position. By pressing a button, the servo will rotate to a set angle, wait for a short time, and then return to its original position. This activity builds on previous lessons about digital inputs and outputs, combining them to create a simple interactive mechanism—similar to how gates, locks, and robotic arms operate in real-world systems.
-
-<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTlbDwsKiML5SB3kMUOl-mINzPNyevz7YVAWKpy9-KMQwGVfMkZJxth57OkIsjj8A/pubembed?start=false&loop=true&delayms=30000" frameborder="0" width="1280" height="749" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-
-<hr>
