--- a/y8u2.md
+++ b/y8u2.md
@@ -29,7 +29,7 @@ In this lesson, you’ll take your first steps into programming the BBC Micro:bi
 
 <hr>
 
-## Lesson 2: Reading Sensor Values
+## Lesson 2: Using the Built-In Microbit Sensors
 
 #### Lesson objectives
 - Explain what a sensor is and describe its role in physical computing.
@@ -42,7 +42,7 @@ In this lesson, you’ll discover what sensors are and how they allow devices to
 
 <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTINN-1L-lnOkDdiyueJze_K2bTBgclB7tKZJb09i4NUaIB-LnZyKo8gF4juoefeg/pubembed?start=false&loop=true&delayms=30000" frameborder="0" width="1280" height="749" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 
-## Lesson 3: Sensing Temperature
+## Lesson 3: Using External Electronic Components
 
 #### Lesson objectives
 - Explain how external components (LEDs, buttons, servos) can be connected to the Micro:bit and why they are useful.
