--- a/y8.md
+++ b/y8.md
@@ -12,7 +12,7 @@ Click on each module to dive into the projects and see what you'll be creating.
 
 # Modules:
 - [Computer Programming - Coding Principles In Scratch & Python](\y8u1)
-- Robotics - Bulding Robot Animals!
+- [Robotics - Bulding Robot Animals!](\y8u2)
 - Fabrication - Making Ink Stamps!
 - Website Development - Building using HTML and CSS
 
